Cria PUT para livro
